smart break word using overflow https://github.com/geneontology/noctua-form/issues/116

--- a/src/app/main/apps/noctua-form/cam/cam-table/annoton-table/annoton-table.component.scss
+++ b/src/app/main/apps/noctua-form/cam/cam-table/annoton-table/annoton-table.component.scss
@@ -83,7 +83,7 @@ $accent: map-get($theme, accent);
       color: #000;
       border-right: #AAA solid 1px;
       position: relative;
-      word-break: break-all;
+      overflow-wrap: break-word;
 
       .noc-edit-button {
         position: absolute;
